--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,6 @@ spring:
   messages:
     basename: resources.lang.labels
 application:
+  template: data/%sTestQuestionsWithAnswers.csv
   rightAnswerCount: 3
-  enResource: classpath:data/enTestQuestionsWithAnswers.csv
-  ruResource: classpath:data/ruTestQuestionsWithAnswers.csv
   locale: en
