Test and config fixes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,6 @@ spring:
   messages:
     basename: resources.lang.labels
 application:
-  template: data/%sTestQuestionsWithAnswers.csv
+  resource: data/%sTestQuestionsWithAnswers.csv
   rightAnswerCount: 3
   locale: en
