--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 dependency-reduced-pom.xml
+spring-shell.log
 
 ### STS ###
 .apt_generated
